# xxx_bot

./: .gitignore  Cargo.toml  shema.sql
src/: bot_commands.rs  database.rs  handlers.rs  keyboards.rs  main.rs  messages.rs  states.rs
src/texts/: all_message.tera  certain_month_message.tera  certain_year_message.tera  error_message.tera  last_rows_message.tera  month_message.tera  year_message.tera
